jalv (1.4.7) unstable;

  * Support CV ports if Jack metadata is enabled (patch from Hanspeter Portner)
  * Improve preset support
  * Support numeric and string plugin properties (event-based control)
  * Update UI when internal plugin state is changed during preset load
  * Add generic Qt control UI from Amadeus Folego
  * Set Jack port order metadata
  * Allow Jack client name to be set from command line (thanks Adam Avramov)
  * Add command prompt to console version for changing controls
  * Add option to print plugin trace messages
  * Print colorful log if output is a terminal
  * Exit on Jack shutdown (patch from Robin Gareus)
  * Report Jack latency (patch from Robin Gareus)
  * Exit GUI versions on interrupt
  * Fix semaphore correctness issues
  * Use moc-qt4 if present for systems with multiple Qt versions
  * Add Qt5 version

 -- David Robillard <d@drobilla.net>  Sun, 31 Jul 2016 01:12:15 -0400

jalv (1.4.6) stable;

  * Show newly saved presets in the preset menu
  * Generate Qt moc nonsense at build time for broader compatibility
  * Update for latest LV2 Atom Object simplifications
  * Set port pretty names via new Jack metadata API
  * Add support for data-access extension (based on patch by Filipe Coelho)
  * Support new UI show/hide interface in console version
  * Add option to print control output changes to stdout
  * Support saving the same preset several times
  * Update man pages and console jalv help output for new options
  * Upgrade to waf 1.7.16

 -- David Robillard <d@drobilla.net>  Fri, 08 Aug 2014 18:30:28 -0400

jalv (1.4.4) stable;

  * Add -c option for setting controls from the command line
  * Add --no-menu option for jalv.gtk
  * Don't expose non-MIDI event ports to Jack
  * Hide controls for ports with notOnGUI property in generic UI
    (based on patch from Robin Gareus)
  * Support ui:portMap feature to allow UIs to avoid hard-coded port indices
    (useful for compatibility and separately distributed UIs)